# EventSystem

./: CMakeLists.txt  main.cpp
src/: Delegate.cpp  Delegate.h  DelegateHandle.cpp  DelegateHandle.h  MultiCastDelegate.cpp  MultiCastDelegate.h
tests/: DelegateTest.cpp  MulticastDelegateTest.cpp  test.cpp
